--- a/i18n/src/org/netbeans/modules/i18n/I18nPanel.form
+++ b/i18n/src/org/netbeans/modules/i18n/I18nPanel.form
@@ -56,30 +56,30 @@
         <Component class="javax.swing.JButton" name="replaceButton">
           <Properties>
             <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="(java.util.ResourceBundle.getBundle(&quot;org/netbeans/modules/i18n/Bundle&quot;).getString(&quot;CTL_ReplaceButton_Mnem&quot;)).charAt(0)" type="code"/>
+              <Connection code="Util.getChar(&quot;CTL_ReplaceButton_Mnem&quot;)" type="code"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_ReplaceButton" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_ReplaceButton" replaceFormat="bundle.getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="skipButton">
           <Properties>
             <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="(java.util.ResourceBundle.getBundle(&quot;org/netbeans/modules/i18n/Bundle&quot;).getString(&quot;CTL_SkipButton_Mnem&quot;)).charAt(0)" type="code"/>
+              <Connection code="Util.getChar(&quot;CTL_SkipButton_Mnem&quot;)" type="code"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_SkipButton" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_SkipButton" replaceFormat="bundle.getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="infoButton">
           <Properties>
             <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="(java.util.ResourceBundle.getBundle(&quot;org/netbeans/modules/i18n/Bundle&quot;).getString(&quot;CTL_InfoButton_Mnem&quot;)).charAt(0)" type="code"/>
+              <Connection code="Util.getChar(&quot;CTL_InfoButton_Mnem&quot;)" type="code"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_InfoButton" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_InfoButton" replaceFormat="bundle.getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
@@ -89,17 +89,17 @@
               <Connection code="Util.getChar(&quot;CTL_CloseButton_mne&quot;)" type="code"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_CloseButton" replaceFormat="Util.getString(&quot;{key}&quot;)"/>
+              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_CloseButton" replaceFormat="bundle.getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="helpButton">
           <Properties>
             <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="(java.util.ResourceBundle.getBundle(&quot;org/netbeans/modules/i18n/Bundle&quot;).getString(&quot;CTL_HelpButton_Mnem&quot;)).charAt(0) " type="code"/>
+              <Connection code="Util.getChar(&quot;CTL_HelpButton_Mnem&quot;)" type="code"/>
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_HelpButton" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+              <ResourceString bundle="org/netbeans/modules/i18n/Bundle.properties" key="CTL_HelpButton" replaceFormat="bundle.getString(&quot;{key}&quot;)"/>
             </Property>
           </Properties>
           <Events>
